[gd_scene load_steps=10 format=3 uid="uid://dxbvsk80vjupt"]

[ext_resource type="Script" path="res://Scripts/Taby Scripts/living_room.gd" id="1_0hlaw"]
[ext_resource type="PackedScene" uid="uid://dkoaycpofp2y0" path="res://Scripts/Taby Scripts/stickplayer.tscn" id="1_gib24"]
[ext_resource type="Texture2D" uid="uid://dvfx2alqwexc2" path="res://Assets/Taby Assets/stairs.png" id="2_5gf51"]
[ext_resource type="FontFile" uid="uid://cjgtqv4nsp8pj" path="res://ascii-sector-16x16-tileset.ttf" id="3_pe3g1"]
[ext_resource type="Texture2D" uid="uid://c2jt4pqenae4c" path="res://Assets/Taby Assets/sidedoor.png" id="5_fkvoe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qp1a4"]
size = Vector2(78, 68.5)

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_6eetd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4l52"]
size = Vector2(87, 98)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rv7v0"]
size = Vector2(63, 82)

[node name="LivingRoom" type="Node2D"]
script = ExtResource("1_0hlaw")

[node name="stickplayer" parent="." instance=ExtResource("1_gib24")]
position = Vector2(18, -16)

[node name="Camera2D" type="Camera2D" parent="stickplayer"]
zoom = Vector2(4, 4)

[node name="Stairs" type="Area2D" parent="."]
position = Vector2(0, -11)

[node name="Sprite2D" type="Sprite2D" parent="Stairs"]
position = Vector2(-2, -16)
texture = ExtResource("2_5gf51")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Stairs"]
position = Vector2(1, -13.25)
shape = SubResource("RectangleShape2D_qp1a4")

[node name="StairsLabel" type="Label" parent="Stairs"]
offset_left = -41.0
offset_top = -37.0
offset_right = 55.0
offset_bottom = -14.0
theme_override_fonts/font = ExtResource("3_pe3g1")
theme_override_font_sizes/font_size = 8
text = "Go upstairs?"

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(0, 38)
shape = SubResource("WorldBoundaryShape2D_6eetd")

[node name="KitchenDoor" type="Area2D" parent="."]
position = Vector2(-113, -8)

[node name="Sprite2D" type="Sprite2D" parent="KitchenDoor"]
position = Vector2(0, -11)
texture = ExtResource("5_fkvoe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="KitchenDoor"]
position = Vector2(-20.5, -14)
shape = SubResource("RectangleShape2D_v4l52")

[node name="KitchenLabel" type="Label" parent="KitchenDoor"]
offset_left = -41.0
offset_top = -42.0
offset_right = 15.0
offset_bottom = -19.0
theme_override_fonts/font = ExtResource("3_pe3g1")
theme_override_font_sizes/font_size = 8
text = "Kitchen"

[node name="Outside" type="Area2D" parent="."]
position = Vector2(151, -17)

[node name="Sprite2D" type="Sprite2D" parent="Outside"]
texture = ExtResource("5_fkvoe")
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Outside"]
position = Vector2(12.5, -1)
shape = SubResource("RectangleShape2D_rv7v0")

[node name="OutsideLabel" type="Label" parent="Outside"]
offset_left = -31.0
offset_top = -33.0
offset_right = 57.0
offset_bottom = -10.0
theme_override_fonts/font = ExtResource("3_pe3g1")
theme_override_font_sizes/font_size = 8
text = "Go outside?"

[connection signal="body_entered" from="Stairs" to="." method="_on_stairs_body_entered"]
[connection signal="body_exited" from="Stairs" to="." method="_on_stairs_body_exited"]
[connection signal="body_entered" from="KitchenDoor" to="." method="_on_kitchen_door_body_entered"]
[connection signal="body_exited" from="KitchenDoor" to="." method="_on_kitchen_door_body_exited"]
[connection signal="body_entered" from="Outside" to="." method="_on_outside_body_entered"]
[connection signal="body_exited" from="Outside" to="." method="_on_outside_body_exited"]
